add backend code and frontend changes

--- a/hotel-booking-app/src/assets/global.css
+++ b/hotel-booking-app/src/assets/global.css
@@ -116,7 +116,7 @@ body {
     background-color: #555;
 }
 
-/* Rooms Listing Page */
+/* Room Listing Page */
 .rooms-page, .contact-page {
     max-width: 1000px;
     margin: 20px auto;
